# focus

./: Cargo.toml  LICENSE  README.md  qclippy  release-local
.github/workflows/: build-linux.yml  release-linux.yml  release-mac.yml
src/: error.rs  main.rs  notification.rs  sound.rs  time.rs  timer.rs  workflow.rs
src/args/: cli.rs
tests/: integration.rs
