[package]
name = "focus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
clap = { version = "4", features = ["derive", "cargo", "env", "unicode"] }
ansi_term = "0.12"
dirs = "5"
jiff = "0.1.1"
figlet-rs = "0.1.5"
rodio = "0.19.0"
notify-rust = "4.11.0"

[dev-dependencies]
pretty_assertions = "1"
assert_cmd = "2"
dir-diff="0.3"
similar="2"
predicates="3"
